Added Bootstrap and Customized Styling

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to my pinteresting app</h1>
-<p>Interested? <%= link_to "Sign up here today", "#"%>!</p>
+<div class="jumbotron">
+	<h1>Welcome to my new app</h1>
+	<p>Interested? <%= link_to "Sign up today", "#", class: "btn btn-primary btn-lg" %></p>
+</div>
