--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,8 +1,19 @@
-$body-bg:        #16a085;
-$navbar-inverse-bg: #8e44ad;
-$navbar-inverse-link-color: white;
-$brand-primary: #e74c3c;
-$jumbotron-bg: #34495e;
-$jumbotron-color: white;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$body-bg:                       #ecf0f1;
+$font-family-sans-serif:        'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:                 45px;
+$navbar-default-bg:             white;
+$navbar-default-brand-color:    #e74c3c;
+$brand-primary:                 #e74c3c;
+$jumbotron-bg:                  white;
 
 @import 'bootstrap';
+
+.center {
+     text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
