--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,12 @@
 <div class="jumbotron center">
 	<h1>Welcome to my new app</h1>
-	<p>
-		<%= link_to "Log in", "#", class: "btn btn-default btn-lg" %> 
-		<%= link_to "Sign up today", "#", class: "btn btn-primary btn-lg" %>
-	</p>
+	<% if user_signed_in? %>
+		<h2>You've entered the Members Area!</h2>
+	<% else %>	
+		<p>
+			<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %> 
+			<%= link_to "Sign up today", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+		</p>
+	<% end %>
+
 </div>
